# portfolio

./: .gitignore  .lighthouserc.json  CLAUDE.md  EFFICIENCY_REPORT.md  README.md  composio-bridge.mjs  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vercel.json  vite.config.ts
.ai/: dependabot-maintenance.md  react-best-practices-assessment.md
.cursor/: worktrees.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci-doctor.lock.yml  ci-doctor.md  ci.yml  docs-update.lock.yml  docs-update.md  issue-triage.lock.yml  issue-triage.md  lighthouse.yml
.kiro/hooks/: readme-scripts-sync.kiro.hook
.kiro/steering/: product.md  tech.md
.vercel/: project.json
ai-guidelines/: blog-guidelines.md  css-2025-best-practices.md  html-2025-best-practices.md  react-19-2025-best-practices.md  seo-best-practices-2025.md  typescript-2025-best-practices.md  web-ada-accessibility-2025-best-practices.md
image-validator/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
public/: robots.txt  sitemap.xml
scripts/: browser-qa-brand-icons.mjs  generate-static-blog.js  generate-static-blog.ts
src/: App.tsx  index.css  vite-env.d.ts
src/components/: AnimatedCounter.tsx  BackToTop.tsx  BlogList.tsx  BlogPost.tsx  Breadcrumbs.tsx  Certifications.tsx  Chatbot.tsx  CompactHeader.tsx  ErrorBoundary.tsx  Experience.tsx  Footer.tsx  Gear.tsx  Giscus.tsx  Header.tsx  NavLink.tsx  PodcastPlayer.tsx  ScrollToTop.tsx  SimpleBrandIcon.tsx  Skills.tsx  Summary.tsx  TagCloud.tsx  ThemeToggle.tsx  VideoCard.tsx  YouTubeEmbed.tsx  brandIconGlyphs.ts
src/config/: analytics.ts  features.ts
src/content/: agent-fleet-orchestration-platform.md  ai-agents-mastery-blog-post.md  ai-image-validator-autogen-blog-post.md  building-heres-your-link-tanstack-start.md  implementing-2025-web-development-best-practices.md  implementing-google-analytics-4-react-portfolio.md  j5-a2a-agent-to-agent-coordination.md  (+14 more)
(+29 files in other folders)
