[project]
name = "image-validator"
version = "0.1.0"
description = "AI-powered image validation application using AutoGen and OpenAI with tracing capabilities"
requires-python = ">=3.10"
dependencies = [
    "autogen-agentchat>=0.6.0",
    "autogen-ext>=0.6.0",
    "autogen-core>=0.6.0",
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "openai>=1.0.0",
    "tiktoken>=0.7.0"
]

[tool.uv]
dev-dependencies = []
