[project]
name = "image-validator"
version = "0.1.0"
description = "AI-powered image validation application using AutoGen and OpenAI with tracing capabilities"
requires-python = ">=3.10"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-ext>=0.7.5",
    "autogen-core>=0.7.5",
    "gradio>=6.13.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "pydantic>=2.13.3",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.41.1",
    "openai>=2.32.0",
    "tiktoken>=0.12.0"
]

[tool.uv]
dev-dependencies = []
