[project]
name = "image-validator"
version = "0.1.0"
description = "AI-powered image validation application using AutoGen and OpenAI with tracing capabilities"
requires-python = ">=3.10"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-ext>=0.7.5",
    "autogen-core>=0.7.5",
    "gradio>=6.20.0",
    "python-dotenv>=1.2.2",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.43.0",
    "openai>=2.44.0",
    "tiktoken>=0.13.0",
    "starlette>=1.3.1",
    "python-multipart>=0.0.32"
]

[tool.uv]
dev-dependencies = []
